tests/js_error/stack_trace/promise_then_module.exp
Error: test
  ┌ tests/js_error/stack_trace/promise_then_module.js:2:9
  |
2 |   throw new Error('test');
  |         ^
Stack trace:
  at <anonymous> (tests/js_error/stack_trace/promise_then_module.js:2:9)